@@ -1,3 +1,7 @@
+Fri Apr 23 16:08:22 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* fairy_perf_graph.rb: 第3版
+
 Fri Apr 23 16:07:17 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* fairy_perf_graph.rb: 第2版
